--- a/package.json
+++ b/package.json
@@ -1,25 +1,20 @@
 {
-  "name": "react-ts",
-  "version": "0.0.0",
-  "private": true,
+  "name": "react-xstate-testing",
+  "packageManager": "yarn@3.2.3",
+  "scripts": {
+    "dev": "parcel index.html"
+  },
   "dependencies": {
-    "@testing-library/react": "^13.4.0",
-    "@types/react": "^18.0.8",
-    "@types/react-dom": "^18.0.2",
-    "@xstate/fsm": "^2.0.0",
     "@xstate/react": "^3.0.1",
-    "@xstate/test": "^0.5.1",
-    "react": "^18.1.0",
-    "react-dom": "^18.1.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "typescript": "^4.8.3",
     "xstate": "^4.33.6"
   },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
-  },
   "devDependencies": {
-    "react-scripts": "latest"
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
+    "parcel": "^2.7.0",
+    "process": "^0.11.10"
   }
 }
